# test_transneft

./: Dockerfile  README.md  conf.yaml  pyproject.toml
data/: data.csv
notebook/: notebook.ipynb
src/: app.py  estimator.py  schema.py
tests/: test_app.py
